--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id="status-container">Carregando...</div>
 
   <script>
-    fetch('https://powerbi-status-api.onrender.com/status.json')
+    fetch('https://gen-backend-mx52.onrender.com/status.json')
       .then(response => response.json())
       .then(data => {
         const container = document.getElementById('status-container');
