--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id="status-container">Carregando...</div>
 
 <script>
-fetch("https://seu-projeto.onrender.com/status")  // URL do backend no Render
+fetch("https://gen-backend-mx52.onrender.com")  // URL do backend no Render
     .then(response => response.json())
     .then(data => {
         console.log(data);
