--- a/index.html
+++ b/index.html
@@ -1,46 +1,120 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Status dos BIs</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    .card { border: 1px solid #ccc; border-radius: 8px; padding: 15px; margin-bottom: 10px; }
-    .ok { background-color: #e0ffe0; }
-    .erro { background-color: #ffe0e0; }
-  </style>
-</head>
-<body>
-  <h1>Status dos Relatórios Power BI</h1>
-  <div id="status-container">Carregando...</div>
-
-<script>
-fetch("https://gen-backend-mx52.onrender.com/status") // Agora chamando corretamente o backend
-    .then(response => response.json())
-    .then(data => {
-        console.log(data);
-        const container = document.getElementById("status-container");
-        container.innerHTML = ""; // Limpa "Carregando..."
-        
-        if (!data.workspaces || data.workspaces.length === 0) {
-            container.innerHTML = "<p>Nenhum workspace encontrado.</p>";
-            return;
+    <meta charset="UTF-8">
+    <title>Status dos Workspaces - Power BI</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f4f4f4;
+            padding: 20px;
         }
 
-        const lista = document.createElement("ul");
-        data.workspaces.forEach(ws => {
-            const item = document.createElement("li");
-            item.textContent = `${ws.workspace} → ${ws.dataset} | Status: ${ws.status} | Última Atualização: ${ws.lastRefresh}`;
-            lista.appendChild(item);
-        });
+        h2 {
+            margin-top: 40px;
+            color: #333;
+        }
 
-        container.appendChild(lista); // Adiciona ao DOM
-    })
-    .catch(error => {
-        console.error("Erro ao buscar dados:", error);
-        document.getElementById("status-container").innerHTML = "<p>Erro ao carregar os dados.</p>";
-    });
-</script>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+            margin-bottom: 40px;
+            background: #fff;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
 
+        th, td {
+            border: 1px solid #ddd;
+            padding: 10px 12px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #f2f2f2;
+            font-weight: bold;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+
+        .type-semantic {
+            color: green;
+            font-weight: bold;
+        }
+
+        .type-dataflow {
+            color: blue;
+            font-weight: bold;
+        }
+
+        .status-failed {
+            color: red;
+        }
+
+        .status-completed {
+            color: green;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Status de Atualizações - Power BI</h1>
+    <div id="tabelas-container"></div>
+
+    <script>
+        async function carregarDados() {
+            const response = await fetch("https://gen-backend-mx52.onrender.com/status");
+            const json = await response.json();
+            const dados = json.data;
+
+            const container = document.getElementById("tabelas-container");
+
+            const workspaces = {};
+
+            // Agrupar por workspace
+            dados.forEach(item => {
+                if (!workspaces[item.workspace]) {
+                    workspaces[item.workspace] = [];
+                }
+                workspaces[item.workspace].push(item);
+            });
+
+            for (const [workspace, elementos] of Object.entries(workspaces)) {
+                const titulo = document.createElement("h2");
+                titulo.textContent = workspace;
+                container.appendChild(titulo);
+
+                const tabela = document.createElement("table");
+                tabela.innerHTML = `
+                    <thead>
+                        <tr>
+                            <th>Nome</th>
+                            <th>Tipo</th>
+                            <th>Status</th>
+                            <th>Início</th>
+                            <th>Fim</th>
+                            <th>Duração</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        ${elementos.map(item => `
+                            <tr>
+                                <td>${item.dataset}</td>
+                                <td class="${item.type === 'Semantic Model' ? 'type-semantic' : 'type-dataflow'}">${item.type}</td>
+                                <td class="${item.status === 'Failed' ? 'status-failed' : 'status-completed'}">${item.status}</td>
+                                <td>${item.start_time || '-'}</td>
+                                <td>${item.end_time || '-'}</td>
+                                <td>${item.duration || '-'}</td>
+                            </tr>
+                        `).join("")}
+                    </tbody>
+                `;
+                container.appendChild(tabela);
+            }
+        }
+
+        carregarDados();
+    </script>
 </body>
 </html>
