--- a/index.html
+++ b/index.html
@@ -62,11 +62,17 @@
     <h1>Status de Atualizações - Power BI</h1>
     <div id="tabelas-container"></div>
 
+    <div id="ultima-coleta" style="margin-bottom: 10px; font-weight: bold;"></div>
+
     <script>
         async function carregarDados() {
             const response = await fetch("https://gen-backend-mx52.onrender.com/status");
             const json = await response.json();
             const dados = json.data;
+
+                // Exibir a última coleta
+    document.getElementById("ultima-coleta").textContent =
+      "Última coleta da API: " + data.ultimaColeta;
 
             const container = document.getElementById("tabelas-container");
 
