--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
             padding: 20px;
         }
 
+        h1 {
+            margin-bottom: 10px;
+            color: #222;
+        }
+
         h2 {
             margin-top: 40px;
             color: #333;
+        }
+
+        #ultima-coleta {
+            margin-bottom: 20px;
+            font-weight: bold;
+            color: #555;
         }
 
         table {
@@ -60,9 +71,8 @@
 <body>
 
     <h1>Status de Atualizações - Power BI</h1>
+    <div id="ultima-coleta"></div>
     <div id="tabelas-container"></div>
-
-    <div id="ultima-coleta" style="margin-bottom: 10px; font-weight: bold;"></div>
 
     <script>
         async function carregarDados() {
@@ -70,11 +80,12 @@
             const json = await response.json();
             const dados = json.data;
 
-                // Exibir a última coleta
-    document.getElementById("ultima-coleta").textContent =
-      "Última coleta da API: " + data.ultimaColeta;
+            // Exibir a última coleta
+            document.getElementById("ultima-coleta").textContent =
+                "Última coleta da API: " + json.ultimaColeta;
 
             const container = document.getElementById("tabelas-container");
+            container.innerHTML = ""; // limpa se recarregar
 
             const workspaces = {};
 
