--- a/index.html
+++ b/index.html
@@ -79,10 +79,20 @@
             const response = await fetch("https://gen-backend-mx52.onrender.com/status");
             const json = await response.json();
             const dados = json.data;
+            const dataUTC = new Date(json.ultimaColeta);
+            const dataLocal = new Date(dataUTC.getTime() - 3 * 60 * 60 * 1000); // Ajuste de -3h
+            const dataFormatada = dataLocal.toLocaleString("pt-BR", {
+                day: "2-digit",
+                month: "2-digit",
+                year: "numeric",
+                hour: "2-digit",
+                minute: "2-digit",
+                second: "2-digit"
+            });
 
-            // Exibir a última coleta
-            document.getElementById("ultima-coleta").textContent =
-                "Última coleta da API: " + json.ultimaColeta;
+document.getElementById("ultima-coleta").textContent =
+    "Última coleta da API: " + dataFormatada;
+
 
             const container = document.getElementById("tabelas-container");
             container.innerHTML = ""; // limpa se recarregar
