--- a/index.html
+++ b/index.html
@@ -1,147 +1,192 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Status dos Workspaces - Power BI</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f4f4f4;
-            padding: 20px;
-        }
+  <meta charset="UTF-8" />
+  <title>Status dos Workspaces - Power BI</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      padding: 20px;
+    }
 
-        h1 {
-            margin-bottom: 10px;
-            color: #222;
-        }
+    h1 {
+      margin-bottom: 10px;
+    }
 
-        h2 {
-            margin-top: 40px;
-            color: #333;
-        }
+    #ultima-coleta {
+      margin-bottom: 20px;
+      font-weight: bold;
+    }
 
-        #ultima-coleta {
-            margin-bottom: 20px;
-            font-weight: bold;
-            color: #555;
-        }
+    .painel-falhas {
+      background: #ffe5e5;
+      border: 2px solid #ff4d4d;
+      padding: 15px;
+      margin-bottom: 30px;
+      border-radius: 8px;
+    }
 
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            margin-bottom: 40px;
-            background: #fff;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
+    .falha-item {
+      margin-bottom: 10px;
+      padding: 10px;
+      background: #fff5f5;
+      border-left: 5px solid red;
+      border-radius: 4px;
+    }
 
-        th, td {
-            border: 1px solid #ddd;
-            padding: 10px 12px;
-            text-align: left;
-        }
+    .falha-item strong {
+      display: inline-block;
+      min-width: 100px;
+    }
 
-        th {
-            background-color: #f2f2f2;
-            font-weight: bold;
-        }
+    h2 {
+      margin-top: 40px;
+      color: #333;
+    }
 
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
-        }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-bottom: 40px;
+      background: #fff;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
 
-        .type-semantic {
-            color: green;
-            font-weight: bold;
-        }
+    th, td {
+      border: 1px solid #ddd;
+      padding: 10px 12px;
+      text-align: left;
+    }
 
-        .type-dataflow {
-            color: blue;
-            font-weight: bold;
-        }
+    th {
+      background-color: #f2f2f2;
+      font-weight: bold;
+    }
 
-        .status-failed {
-            color: red;
-        }
+    tr:nth-child(even) {
+      background-color: #f9f9f9;
+    }
 
-        .status-completed {
-            color: green;
-        }
-    </style>
+    .type-semantic {
+      color: green;
+      font-weight: bold;
+    }
+
+    .type-dataflow {
+      color: blue;
+      font-weight: bold;
+    }
+
+    .status-failed {
+      color: red;
+      font-weight: bold;
+    }
+
+    .status-completed {
+      color: green;
+    }
+
+    .linha-falha {
+      background-color: #ffe5e5;
+    }
+  </style>
 </head>
 <body>
+  <h1>Status de Atualizações - Power BI</h1>
+  <div id="ultima-coleta"></div>
 
-    <h1>Status de Atualizações - Power BI</h1>
-    <div id="ultima-coleta"></div>
-    <div id="tabelas-container"></div>
+  <div class="painel-falhas" id="painel-falhas">
+    <h2>❗ Falhas Críticas</h2>
+    <!-- Aqui entrarão os cards de falhas -->
+  </div>
 
-    <script>
-        async function carregarDados() {
-            const response = await fetch("https://gen-backend-mx52.onrender.com/status");
-            const json = await response.json();
-            const dados = json.data;
-            const dataUTC = new Date(json.ultimaColeta);
-            const dataLocal = new Date(dataUTC.getTime() + 0 * 60 * 60 * 1000); // Ajuste de -3h
-            const dataFormatada = dataLocal.toLocaleString("pt-BR", {
-                day: "2-digit",
-                month: "2-digit",
-                year: "numeric",
-                hour: "2-digit",
-                minute: "2-digit",
-                second: "2-digit"
-            });
+  <div id="tabelas-container"></div>
 
-document.getElementById("ultima-coleta").textContent =
-    "Última coleta da API: " + dataFormatada;
+  <script>
+    async function carregarDados() {
+      const response = await fetch("https://gen-backend-mx52.onrender.com/status");
+      const json = await response.json();
+      const dados = json.data;
 
+      // Formatando a data de coleta
+      const dataUTC = new Date(json.ultimaColeta);
+      const dataLocal = new Date(dataUTC.getTime() - 3 * 60 * 60 * 1000);
+      const dataFormatada = dataLocal.toLocaleString("pt-BR", {
+        day: "2-digit",
+        month: "2-digit",
+        year: "numeric",
+        hour: "2-digit",
+        minute: "2-digit",
+        second: "2-digit"
+      });
+      document.getElementById("ultima-coleta").textContent = "Última coleta da API: " + dataFormatada;
 
-            const container = document.getElementById("tabelas-container");
-            container.innerHTML = ""; // limpa se recarregar
+      const painelFalhas = document.getElementById("painel-falhas");
+      const container = document.getElementById("tabelas-container");
+      const workspaces = {};
 
-            const workspaces = {};
-
-            // Agrupar por workspace
-            dados.forEach(item => {
-                if (!workspaces[item.workspace]) {
-                    workspaces[item.workspace] = [];
-                }
-                workspaces[item.workspace].push(item);
-            });
-
-            for (const [workspace, elementos] of Object.entries(workspaces)) {
-                const titulo = document.createElement("h2");
-                titulo.textContent = workspace;
-                container.appendChild(titulo);
-
-                const tabela = document.createElement("table");
-                tabela.innerHTML = `
-                    <thead>
-                        <tr>
-                            <th>Nome</th>
-                            <th>Tipo</th>
-                            <th>Status</th>
-                            <th>Início</th>
-                            <th>Fim</th>
-                            <th>Duração</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        ${elementos.map(item => `
-                            <tr>
-                                <td>${item.dataset}</td>
-                                <td class="${item.type === 'Semantic Model' ? 'type-semantic' : 'type-dataflow'}">${item.type}</td>
-                                <td class="${item.status === 'Failed' ? 'status-failed' : 'status-completed'}">${item.status}</td>
-                                <td>${item.start_time || '-'}</td>
-                                <td>${item.end_time || '-'}</td>
-                                <td>${item.duration || '-'}</td>
-                            </tr>
-                        `).join("")}
-                    </tbody>
-                `;
-                container.appendChild(tabela);
-            }
+      // Separar falhas e agrupar por workspace
+      dados.forEach(item => {
+        if (!workspaces[item.workspace]) {
+          workspaces[item.workspace] = [];
         }
+        workspaces[item.workspace].push(item);
 
-        carregarDados();
-    </script>
+        // Criar cartão de falha
+        if (item.status === "Failed") {
+          const div = document.createElement("div");
+          div.className = "falha-item";
+          div.innerHTML = `
+            <strong>Workspace:</strong> ${item.workspace}<br>
+            <strong>Tipo:</strong> ${item.type}<br>
+            <strong>Dataset:</strong> ${item.dataset}<br>
+            <strong>Status:</strong> <span class="status-failed">${item.status}</span><br>
+            <strong>Início:</strong> ${item.start_time || "-"}<br>
+            <strong>Fim:</strong> ${item.end_time || "-"}
+          `;
+          painelFalhas.appendChild(div);
+        }
+      });
+
+      // Tabelas por workspace
+      for (const [workspace, elementos] of Object.entries(workspaces)) {
+        const titulo = document.createElement("h2");
+        titulo.textContent = workspace;
+        container.appendChild(titulo);
+
+        const tabela = document.createElement("table");
+        tabela.innerHTML = `
+          <thead>
+            <tr>
+              <th>Nome</th>
+              <th>Tipo</th>
+              <th>Status</th>
+              <th>Início</th>
+              <th>Fim</th>
+              <th>Duração</th>
+            </tr>
+          </thead>
+          <tbody>
+            ${elementos
+              .map(item => `
+                <tr class="${item.status === "Failed" ? "linha-falha" : ""}">
+                  <td>${item.dataset}</td>
+                  <td class="${item.type === "Semantic Model" ? "type-semantic" : "type-dataflow"}">${item.type}</td>
+                  <td class="${item.status === "Failed" ? "status-failed" : "status-completed"}">${item.status}</td>
+                  <td>${item.start_time || "-"}</td>
+                  <td>${item.end_time || "-"}</td>
+                  <td>${item.duration || "-"}</td>
+                </tr>
+              `)
+              .join("")}
+          </tbody>
+        `;
+        container.appendChild(tabela);
+      }
+    }
+
+    carregarDados();
+  </script>
 </body>
 </html>
