--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
       // Formatando a data de coleta
       const dataUTC = new Date(json.ultimaColeta);
-      const dataLocal = new Date(dataUTC.getTime() - 3 * 60 * 60 * 1000);
+      const dataLocal = new Date(dataUTC.getTime() + 0 * 60 * 60 * 1000);
       const dataFormatada = dataLocal.toLocaleString("pt-BR", {
         day: "2-digit",
         month: "2-digit",
