--- a/index.html
+++ b/index.html
@@ -110,17 +110,7 @@
       const dados = json.data;
 
       // Formatando a data de coleta
-      const dataUTC = new Date(json.ultimaColeta);
-      const dataLocal = new Date(dataUTC.getTime() + 0 * 60 * 60 * 1000);
-      const dataFormatada = dataLocal.toLocaleString("pt-BR", {
-        day: "2-digit",
-        month: "2-digit",
-        year: "numeric",
-        hour: "2-digit",
-        minute: "2-digit",
-        second: "2-digit"
-      });
-      document.getElementById("ultima-coleta").textContent = "Última coleta da API: " + dataFormatada;
+      document.getElementById("ultima-coleta").textContent = "Última coleta da API: " + json.ultimaColeta;
 
       const painelFalhas = document.getElementById("painel-falhas");
       const container = document.getElementById("tabelas-container");
