--- a/index.html
+++ b/index.html
@@ -1,180 +1,132 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Status dos Workspaces - Power BI</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Status dos Dashboards</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
       padding: 20px;
+      background-color: #f4f4f4;
     }
-
-    h1 {
-      margin-bottom: 10px;
-    }
-
-    #ultima-coleta {
-      margin-bottom: 20px;
-      font-weight: bold;
-    }
-
-    .painel-falhas {
-      background: #ffe5e5;
-      border: 2px solid #ff4d4d;
-      padding: 15px;
-      margin-bottom: 30px;
-      border-radius: 8px;
-    }
-
-    .falha-item {
-      margin-bottom: 10px;
-      padding: 10px;
-      background: #fff5f5;
-      border-left: 5px solid red;
-      border-radius: 4px;
-    }
-
-    .falha-item strong {
-      display: inline-block;
-      min-width: 100px;
-    }
-
     h2 {
       margin-top: 40px;
-      color: #333;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 5px;
     }
-
     table {
-      border-collapse: collapse;
       width: 100%;
-      margin-bottom: 40px;
-      background: #fff;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      border-collapse: collapse;
+      margin-bottom: 30px;
     }
-
     th, td {
-      border: 1px solid #ddd;
-      padding: 10px 12px;
+      border: 1px solid #ccc;
+      padding: 8px;
       text-align: left;
     }
-
     th {
-      background-color: #f2f2f2;
+      background-color: #eee;
+    }
+    .status-Completed {
+      background-color: #d4edda;
+    }
+    .status-Failed {
+      background-color: #f8d7da;
+    }
+    .status-Disabled {
+      background-color: #fff3cd;
+    }
+    .status-Desconhecido {
+      background-color: #e2e3e5;
+    }
+    .loading {
       font-weight: bold;
     }
-
-    tr:nth-child(even) {
-      background-color: #f9f9f9;
-    }
-
-    .type-semantic {
-      color: green;
-      font-weight: bold;
-    }
-
-    .type-dataflow {
-      color: blue;
-      font-weight: bold;
-    }
-
-    .status-failed {
+    .error {
       color: red;
       font-weight: bold;
-    }
-
-    .status-completed {
-      color: green;
-    }
-
-    .linha-falha {
-      background-color: #ffe5e5;
     }
   </style>
 </head>
 <body>
-  <h1>Status de Atualizações - Power BI</h1>
-  <div id="ultima-coleta"></div>
-
-  <div class="painel-falhas" id="painel-falhas">
-    <h2>❗ Falhas Críticas</h2>
-  </div>
-
-  <div id="tabelas-container"></div>
+  <h1>Status dos Dashboards</h1>
+  <div id="content" class="loading">Carregando dados...</div>
 
   <script>
     async function carregarDados() {
-      const response = await fetch("https://gen-backend-mx52.onrender.com/status");
-      const json = await response.json();
-      const dados = json.data;
+      try {
+        const resposta = await fetch('https://seudominio.com/status.json');
+        if (!resposta.ok) throw new Error("Erro ao carregar API: " + resposta.status);
 
-      document.getElementById("ultima-coleta").textContent = "Última coleta da API: " + json.ultimaColeta;
+        const json = await resposta.json();
+        const dados = json.data;
 
-      const painelFalhas = document.getElementById("painel-falhas");
-      const container = document.getElementById("tabelas-container");
-      const workspaces = {};
+        if (!Array.isArray(dados)) throw new Error("Formato de dados inválido.");
 
-      dados.forEach(item => {
-        const nomeWorkspace = item.workspace.trim();
+        const contentDiv = document.getElementById('content');
+        contentDiv.innerHTML = '';
 
-        if (!workspaces[nomeWorkspace]) {
-          workspaces[nomeWorkspace] = [];
-        }
-        workspaces[nomeWorkspace].push(item);
+        // Agrupar por workspace
+        const porWorkspace = {};
+        dados.forEach(item => {
+          if (!porWorkspace[item.workspace]) {
+            porWorkspace[item.workspace] = [];
+          }
+          porWorkspace[item.workspace].push(item);
+        });
 
-        if (item.status === "Failed") {
-          const div = document.createElement("div");
-          div.className = "falha-item";
-          div.innerHTML = `
-            <strong>Workspace:</strong> ${nomeWorkspace}<br>
-            <strong>Tipo:</strong> ${item.type}<br>
-            <strong>Dataset:</strong> ${item.dataset}<br>
-            <strong>Status:</strong> <span class="status-failed">${item.status}</span><br>
-            <strong>Início:</strong> ${item.start_time || "-"}<br>
-            <strong>Fim:</strong> ${item.end_time || "-"}
-          `;
-          painelFalhas.appendChild(div);
-        }
-      });
+        for (const workspace in porWorkspace) {
+          const h2 = document.createElement('h2');
+          h2.textContent = workspace;
+          contentDiv.appendChild(h2);
 
-      console.log("Dados agrupados por workspace:", workspaces);
-
-      for (const [workspace, elementos] of Object.entries(workspaces)) {
-        const titulo = document.createElement("h2");
-        titulo.textContent = workspace;
-        container.appendChild(titulo);
-
-        const tabela = document.createElement("table");
-        tabela.innerHTML = `
-          <thead>
+          const table = document.createElement('table');
+          const thead = document.createElement('thead');
+          thead.innerHTML = `
             <tr>
-              <th>Nome</th>
+              <th>Dataset</th>
               <th>Tipo</th>
               <th>Status</th>
               <th>Início</th>
               <th>Fim</th>
               <th>Duração</th>
-            </tr>
-          </thead>
-          <tbody>
-            ${elementos
-              .map(item => {
-                console.log("Renderizando:", item);
-                return `
-                  <tr class="${item.status === "Failed" ? "linha-falha" : ""}">
-                    <td>${item.dataset}</td>
-                    <td class="${item.type === "Semantic Model" ? "type-semantic" : "type-dataflow"}">${item.type}</td>
-                    <td class="${item.status === "Failed" ? "status-failed" : "status-completed"}">${item.status}</td>
-                    <td>${item.start_time || "-"}</td>
-                    <td>${item.end_time || "-"}</td>
-                    <td>${item.duration || "-"}</td>
-                  </tr>
-                `;
-              })
-              .join("")}
-          </tbody>
-        `;
-        container.appendChild(tabela);
+            </tr>`;
+          table.appendChild(thead);
+
+          const tbody = document.createElement('tbody');
+
+          porWorkspace[workspace].forEach(item => {
+            const row = document.createElement('tr');
+            const statusClass = `status-${(item.status || '').split(' ')[0]}`;
+            row.className = statusClass;
+
+            row.innerHTML = `
+              <td>${item.dataset || ''}</td>
+              <td>${item.type || ''}</td>
+              <td>${item.status || ''}</td>
+              <td>${item.start_time || ''}</td>
+              <td>${item.end_time || ''}</td>
+              <td>${item.duration || ''}</td>`;
+            tbody.appendChild(row);
+          });
+
+          table.appendChild(tbody);
+          contentDiv.appendChild(table);
+        }
+
+        // Última coleta
+        if (json.ultimaColeta) {
+          const footer = document.createElement('p');
+          footer.textContent = "Última coleta: " + json.ultimaColeta;
+          contentDiv.appendChild(footer);
+        }
+
+      } catch (erro) {
+        const contentDiv = document.getElementById('content');
+        contentDiv.className = 'error';
+        contentDiv.textContent = 'Erro ao carregar dados: ' + erro.message;
+        console.error(erro);
       }
     }
 
