--- a/index.html
+++ b/index.html
@@ -47,10 +47,48 @@
       color: red;
       font-weight: bold;
     }
+
+    /* Círculos de falha */
+    .circle-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin: 20px 0;
+      justify-content: start;
+    }
+
+    .circle {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      background-color: #ffcccc;
+      color: #800000;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      font-size: 13px;
+      padding: 10px;
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s;
+    }
+
+    .circle:hover {
+      transform: scale(1.05);
+      background-color: #ffb3b3;
+      cursor: default;
+    }
+
+    .circle strong {
+      font-size: 14px;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
   <h1>Status dos Dashboards</h1>
+  <div id="failed-circles" class="circle-container"></div>
   <div id="content" class="loading">Carregando dados...</div>
 
   <script>
@@ -65,7 +103,22 @@
         if (!Array.isArray(dados)) throw new Error("Formato de dados inválido.");
 
         const contentDiv = document.getElementById('content');
+        const failedContainer = document.getElementById('failed-circles');
         contentDiv.innerHTML = '';
+        failedContainer.innerHTML = '';
+
+        // Mostrar falhas no topo em círculos
+        dados.forEach(item => {
+          if (item.status === "Failed") {
+            const circle = document.createElement("div");
+            circle.classList.add("circle");
+            circle.innerHTML = `
+              <strong>${item.dataset}</strong>
+              <div style="margin-top: 5px;">${item.workspace}</div>
+            `;
+            failedContainer.appendChild(circle);
+          }
+        });
 
         // Agrupar por workspace
         const porWorkspace = {};
