--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <center><title>Status dos Dashboards</title></center>
+  <title>Status dos Dashboards</title>
   <style>
+    title {
+       text-align:center
+    }
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
