--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 </head>
 <body>
   <h1>Status dos Dashboards</h1>
-  <div id="failed-circles" class="circle-container"></div>
-  <div id="content" class="loading">Carregando dados...</div>
+  <center><div id="failed-circles" class="circle-container"></div></center>
+  <center><div id="content" class="loading">Carregando dados...</div></center>
 
   <script>
     async function carregarDados() {
