--- a/index.html
+++ b/index.html
@@ -6,12 +6,36 @@
   <title>Status dos Dashboards</title>
   <style>
     h1 {
-       text-align:center
+        text-align:center
     }
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
       background-color: #f4f4f4;
+    }
+    h1 {
+      margin-bottom: 20px;
+    }
+    .falhas-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-bottom: 30px;
+    }
+    .falha-botao {
+      border: none;
+      border-radius: 50%;
+      width: 80px;
+      height: 80px;
+      background-color: #f44336;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      transition: transform 0.2s ease;
+    }
+    .falha-botao:hover {
+      transform: scale(1.1);
     }
     h2 {
       margin-top: 40px;
@@ -50,49 +74,12 @@
       color: red;
       font-weight: bold;
     }
-
-    /* Círculos de falha */
-    .circle-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-      margin: 20px 0;
-      justify-content: start;
-    }
-
-    .circle {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      background-color: #ffcccc;
-      color: #800000;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      font-size: 13px;
-      padding: 10px;
-      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-      transition: transform 0.2s;
-    }
-
-    .circle:hover {
-      transform: scale(1.05);
-      background-color: #ffb3b3;
-      cursor: default;
-    }
-
-    .circle strong {
-      font-size: 14px;
-      font-weight: bold;
-    }
   </style>
 </head>
 <body>
   <h1>Status dos Dashboards</h1>
-  <center><div id="failed-circles" class="circle-container"></div></center>
-  <center><div id="content" class="loading">Carregando dados...</div></center>
+  <div id="falhas" class="falhas-container"></div>
+  <div id="content" class="loading">Carregando dados...</div>
 
   <script>
     async function carregarDados() {
@@ -106,21 +93,23 @@
         if (!Array.isArray(dados)) throw new Error("Formato de dados inválido.");
 
         const contentDiv = document.getElementById('content');
-        const failedContainer = document.getElementById('failed-circles');
+        const falhasDiv = document.getElementById('falhas');
         contentDiv.innerHTML = '';
-        failedContainer.innerHTML = '';
+        falhasDiv.innerHTML = '';
 
-        // Mostrar falhas no topo em círculos
-        dados.forEach(item => {
-          if (item.status === "Failed") {
-            const circle = document.createElement("div");
-            circle.classList.add("circle");
-            circle.innerHTML = `
-              <strong>${item.dataset}</strong>
-              <div style="margin-top: 5px;">${item.workspace}</div>
-            `;
-            failedContainer.appendChild(circle);
-          }
+        // Mostrar falhas como botões
+        dados.filter(d => d.status === "Failed").forEach(falha => {
+          const btn = document.createElement('button');
+          btn.className = 'falha-botao';
+          btn.textContent = falha.dataset?.slice(0, 6) || 'Falha';
+          btn.title = falha.dataset;
+
+          btn.onclick = () => {
+            const msg = falha.errorMessage || "Sem mensagem de erro disponível.";
+            alert(`Erro em "${falha.dataset}":\n\n${msg}`);
+          };
+
+          falhasDiv.appendChild(btn);
         });
 
         // Agrupar por workspace
@@ -171,7 +160,6 @@
           contentDiv.appendChild(table);
         }
 
-        // Última coleta
         if (json.ultimaColeta) {
           const footer = document.createElement('p');
           footer.textContent = "Última coleta: " + json.ultimaColeta;
