--- a/index.html
+++ b/index.html
@@ -28,17 +28,24 @@
       position: relative;
     }
     .falha-botao {
-      border: none;
-      border-radius: 50%;
-      width: 80px;
-      height: 80px;
-      background-color: #f44336;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-      transition: transform 0.2s ease;
-    }
+  border: none;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  background-color: #f44336;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  transition: transform 0.2s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 10px;
+  word-break: break-word;
+}
+
     .falha-botao:hover {
       transform: scale(1.1);
     }
