--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
     .falha-botao {
   border: none;
-  border-radius: 50%;
+  border-radius: 12px;
   width: 100px;
   height: 100px;
   background-color: #f44336;
